[package]
name = "Pathie"
version = "0.1.1"
edition = "2021"

[dependencies]
log = "0.4"
chrono = "0.4.22"
ash = "0.37"
env_logger = "0.10.0"
winit = "0.28.6"
cgmath = "0.18.0"
x11 = "2.20.0"
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
strum = "0.25.0"
strum_macros = "0.25.2"
rand = "0.8.5"
memoffset = "0.9.0"
noise = "0.8.2"
nalgebra-glm = "0.18.0"
image = "0.24"
